Diseño de activity altas

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".ActivityHubTutor"></activity>
+        <activity android:name=".ActivityAltas"></activity>
 
     </application>
 
