Diseño de activity altas

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
         <activity android:name=".ActivityHubTutor"></activity>
         <activity android:name=".ActivityAltas"></activity>
+        <activity android:name=".ActivityBajas"></activity>
 
     </application>
 
