--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ActivityHubTutor"></activity>
         <activity android:name=".ActivityAltas"></activity>
         <activity android:name=".ActivityBajas"></activity>
+        <activity android:name=".ActivityCambios"></activity>
 
     </application>
 
