--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ActivityAltas"></activity>
         <activity android:name=".ActivityBajas"></activity>
         <activity android:name=".ActivityCambios"></activity>
+        <activity android:name=".ActivityConsultas"></activity>
 
     </application>
 
