--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ActivityBajas"></activity>
         <activity android:name=".ActivityCambios"></activity>
         <activity android:name=".ActivityConsultas"></activity>
+        <activity android:name=".ActivityAltasReporte"></activity>
 
     </application>
 
