--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ActivityCambios"></activity>
         <activity android:name=".ActivityConsultas"></activity>
         <activity android:name=".ActivityAltasReporte"></activity>
+        <activity android:name=".ActivityCambiosReporte"></activity>
 
     </application>
 
