--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ActivityConsultas"></activity>
         <activity android:name=".ActivityAltasReporte"></activity>
         <activity android:name=".ActivityCambiosReporte"></activity>
+        <activity android:name=".ActivityConsultasReporte"></activity>
 
     </application>
 
